RESOLVED FIXED171497
Ensure RealtimeOutgoingVideoSource sends a black frame when its related source is muted
https://bugs.webkit.org/show_bug.cgi?id=171497
Summary Ensure RealtimeOutgoingVideoSource sends a black frame when its related sourc...
youenn fablet
Reported 2017-05-01 08:59:35 PDT
As per the spec, a black frame should be sent when a track is muted. We are currently doing so at track consumer level.
Attachments
Patch (14.62 KB, patch)
2017-05-01 10:14 PDT, youenn fablet
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (1.10 MB, application/zip)
2017-05-01 11:21 PDT, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (836.50 KB, application/zip)
2017-05-01 11:50 PDT, Build Bot
no flags
Patch for landing (15.95 KB, patch)
2017-05-01 15:57 PDT, youenn fablet
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (11.29 MB, application/zip)
2017-05-01 17:32 PDT, Build Bot
no flags
Patch for landing (15.24 KB, patch)
2017-05-01 17:53 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-05-01 10:14:38 PDT
Build Bot
Comment 2 2017-05-01 11:21:30 PDT
Comment on attachment 308729 [details] Patch Attachment 308729 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3652157 New failing tests: webrtc/video-mute.html
Build Bot
Comment 3 2017-05-01 11:21:31 PDT
Created attachment 308735 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-05-01 11:50:55 PDT
Comment on attachment 308729 [details] Patch Attachment 308729 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3652191 New failing tests: webrtc/video-mute.html
Build Bot
Comment 5 2017-05-01 11:50:57 PDT
Created attachment 308740 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Eric Carlson
Comment 6 2017-05-01 13:48:53 PDT
Comment on attachment 308729 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=308729&action=review > Source/WebCore/ChangeLog:11 > + VideoToolBox sometimes do not output a frame until receveing the other. Nit: "sometimes do not" -> "sometimes does not" "until receveing the other -> "until it receives another" > Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp:84 > + sendBlackFrame(); > + // FIXME: We should not need to send two black frames but VTB requires that so we are sure a black frame is sent over the wire. > + m_blackFrameTimer.startOneShot(0_s); Nit: this could be put into a helper function since it is repeated in sourceEnabledChanged. > Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.h:95 > + uint32_t m_width { 0 }; > + uint32_t m_height { 0 }; Nit: can you use an IntSize here?
youenn fablet
Comment 7 2017-05-01 14:04:38 PDT
Thanks for the review. (In reply to Eric Carlson from comment #6) > Comment on attachment 308729 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=308729&action=review > > > Source/WebCore/ChangeLog:11 > > + VideoToolBox sometimes do not output a frame until receveing the other. > > Nit: "sometimes do not" -> "sometimes does not" > > "until receveing the other -> "until it receives another" OK > > Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp:84 > > + sendBlackFrame(); > > + // FIXME: We should not need to send two black frames but VTB requires that so we are sure a black frame is sent over the wire. > > + m_blackFrameTimer.startOneShot(0_s); > > Nit: this could be put into a helper function since it is repeated in > sourceEnabledChanged. OK > > Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.h:95 > > + uint32_t m_width { 0 }; > > + uint32_t m_height { 0 }; > > Nit: can you use an IntSize here? IntSize is int-based while settings is uint32_t based, which seems better for values that can only be positive.
youenn fablet
Comment 8 2017-05-01 15:57:06 PDT
Created attachment 308782 [details] Patch for landing
Build Bot
Comment 9 2017-05-01 17:32:17 PDT
Comment on attachment 308782 [details] Patch for landing Attachment 308782 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3654423 New failing tests: webrtc/video-mute.html
Build Bot
Comment 10 2017-05-01 17:32:19 PDT
Created attachment 308792 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
youenn fablet
Comment 11 2017-05-01 17:53:10 PDT
Created attachment 308794 [details] Patch for landing
WebKit Commit Bot
Comment 12 2017-05-01 18:33:41 PDT
Comment on attachment 308794 [details] Patch for landing Clearing flags on attachment: 308794 Committed r216054: <http://trac.webkit.org/changeset/216054>
WebKit Commit Bot
Comment 13 2017-05-01 18:33:42 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 14 2017-05-01 19:01:50 PDT
Note You need to log in before you can comment on or make changes to this bug.