Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp
@@ -34,6 +34,7 @@
 #include <webrtc/common_video/include/corevideo_frame_buffer.h>
 #include <webrtc/common_video/libyuv/include/webrtc_libyuv.h>
 #include <webrtc/media/base/videoframe.h>
+#include <wtf/MainThread.h>
 
 #include "CoreMediaSoftLink.h"
 #include "CoreVideoSoftLink.h"
@@ -42,8 +43,10 @@ namespace WebCore {
 
 RealtimeOutgoingVideoSource::RealtimeOutgoingVideoSource(Ref<RealtimeMediaSource>&& videoSource)
     : m_videoSource(WTFMove(videoSource))
+    , m_blackFrameTimer(*this, &RealtimeOutgoingVideoSource::sendOneBlackFrame)
 {
     m_videoSource->addObserver(*this);
+    setSizeFromSource();
 }
 
 bool RealtimeOutgoingVideoSource::setSource(Ref<RealtimeMediaSource>&& newSource)
@@ -59,22 +62,40 @@ bool RealtimeOutgoingVideoSource::setSource(Ref<RealtimeMediaSource>&& newSource
     m_videoSource->removeObserver(*this);
     m_videoSource = WTFMove(newSource);
     m_videoSource->addObserver(*this);
+    setSizeFromSource();
     return true;
 }
 
 void RealtimeOutgoingVideoSource::stop()
 {
     m_videoSource->removeObserver(*this);
+    m_blackFrameTimer.stop();
+    m_isStopped = true;
 }
 
 void RealtimeOutgoingVideoSource::sourceMutedChanged()
 {
+    ASSERT(m_muted != m_videoSource->muted());
     m_muted = m_videoSource->muted();
+
+    if (m_muted && m_sinks.size() && m_enabled)
+        sendBlackFrame();
 }
 
 void RealtimeOutgoingVideoSource::sourceEnabledChanged()
 {
+    ASSERT(m_enabled != m_videoSource->enabled());
     m_enabled = m_videoSource->enabled();
+
+    if (!m_enabled && m_sinks.size() && !m_muted)
+        sendBlackFrame();
+}
+
+void RealtimeOutgoingVideoSource::setSizeFromSource()
+{
+    const auto& settings = m_videoSource->settings();
+    m_width = settings.width();
+    m_height = settings.height();
 }
 
 bool RealtimeOutgoingVideoSource::GetStats(Stats*)
@@ -94,9 +115,26 @@ void RealtimeOutgoingVideoSource::RemoveSink(rtc::VideoSinkInterface<webrtc::Vid
     m_sinks.removeFirst(sink);
 }
 
-void RealtimeOutgoingVideoSource::sendFrame(rtc::scoped_refptr<webrtc::VideoFrameBuffer>&& buffer, webrtc::VideoRotation rotation)
+void RealtimeOutgoingVideoSource::sendBlackFrame()
 {
-    webrtc::VideoFrame frame(buffer, 0, 0, rotation);
+    if (!m_blackFrame) {
+        auto frame = m_bufferPool.CreateBuffer(m_width, m_height);
+        frame->SetToBlack();
+        m_blackFrame = WTFMove(frame);
+    }
+    sendOneBlackFrame();
+    // FIXME: We should not need to send two black frames but VTB requires that so we are sure a black frame is sent over the wire.
+    m_blackFrameTimer.startOneShot(0_s);
+}
+
+void RealtimeOutgoingVideoSource::sendOneBlackFrame()
+{
+    sendFrame(rtc::scoped_refptr<webrtc::VideoFrameBuffer>(m_blackFrame));
+}
+
+void RealtimeOutgoingVideoSource::sendFrame(rtc::scoped_refptr<webrtc::VideoFrameBuffer>&& buffer)
+{
+    webrtc::VideoFrame frame(buffer, 0, 0, m_currentRotation);
     for (auto* sink : m_sinks)
         sink->OnFrame(frame);
 }
@@ -106,54 +144,45 @@ void RealtimeOutgoingVideoSource::videoSampleAvailable(MediaSample& sample)
     if (!m_sinks.size())
         return;
 
-    // FIXME: Shouldn't we use RealtimeMediaSource::size()
-    const auto& settings = m_videoSource->settings();
-
-    if (m_muted || !m_enabled) {
-        auto blackBuffer = m_bufferPool.CreateBuffer(settings.width(), settings.height());
-        blackBuffer->SetToBlack();
-        sendFrame(WTFMove(blackBuffer), webrtc::kVideoRotation_0);
+    if (m_muted || !m_enabled)
         return;
+
+    switch (sample.videoRotation()) {
+    case MediaSample::VideoRotation::None:
+        m_currentRotation = webrtc::kVideoRotation_0;
+        break;
+    case MediaSample::VideoRotation::UpsideDown:
+        m_currentRotation = webrtc::kVideoRotation_180;
+        break;
+    case MediaSample::VideoRotation::Right:
+        m_currentRotation = webrtc::kVideoRotation_90;
+        break;
+    case MediaSample::VideoRotation::Left:
+        m_currentRotation = webrtc::kVideoRotation_270;
+        break;
     }
 
     ASSERT(sample.platformSample().type == PlatformSample::CMSampleBufferType);
     auto pixelBuffer = static_cast<CVPixelBufferRef>(CMSampleBufferGetImageBuffer(sample.platformSample().sample.cmSampleBuffer));
     auto pixelFormatType = CVPixelBufferGetPixelFormatType(pixelBuffer);
 
-    webrtc::VideoRotation rotation;
-    switch (sample.videoRotation()) {
-    case MediaSample::VideoRotation::None:
-        rotation = webrtc::kVideoRotation_0;
-        break;
-    case MediaSample::VideoRotation::UpsideDown:
-        rotation = webrtc::kVideoRotation_180;
-        break;
-    case MediaSample::VideoRotation::Right:
-        rotation = webrtc::kVideoRotation_90;
-        break;
-    case MediaSample::VideoRotation::Left:
-        rotation = webrtc::kVideoRotation_270;
-        break;
-    }
-
     if (pixelFormatType == kCVPixelFormatType_420YpCbCr8Planar || pixelFormatType == kCVPixelFormatType_420YpCbCr8BiPlanarFullRange) {
-        sendFrame(new rtc::RefCountedObject<webrtc::CoreVideoFrameBuffer>(pixelBuffer), rotation);
+        sendFrame(new rtc::RefCountedObject<webrtc::CoreVideoFrameBuffer>(pixelBuffer));
         return;
     }
 
     CVPixelBufferLockBaseAddress(pixelBuffer, 0);
     auto* source = reinterpret_cast<uint8_t*>(CVPixelBufferGetBaseAddressOfPlane(pixelBuffer, 0));
 
-    auto newBuffer = m_bufferPool.CreateBuffer(settings.width(), settings.height());
+    auto newBuffer = m_bufferPool.CreateBuffer(m_width, m_height);
     if (pixelFormatType == kCVPixelFormatType_32BGRA)
-        webrtc::ConvertToI420(webrtc::kARGB, source, 0, 0, settings.width(), settings.height(), 0, webrtc::kVideoRotation_0, newBuffer);
+        webrtc::ConvertToI420(webrtc::kARGB, source, 0, 0, m_width, m_height, 0, webrtc::kVideoRotation_0, newBuffer);
     else {
-        // FIXME: Mock source conversion works with kBGRA while regular camera works with kARGB
         ASSERT(pixelFormatType == kCVPixelFormatType_32ARGB);
-        webrtc::ConvertToI420(webrtc::kBGRA, source, 0, 0, settings.width(), settings.height(), 0, webrtc::kVideoRotation_0, newBuffer);
+        webrtc::ConvertToI420(webrtc::kBGRA, source, 0, 0, m_width, m_height, 0, webrtc::kVideoRotation_0, newBuffer);
     }
     CVPixelBufferUnlockBaseAddress(pixelBuffer, 0);
-    sendFrame(WTFMove(newBuffer), rotation);
+    sendFrame(WTFMove(newBuffer));
 }
 
 } // namespace WebCore
