Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.h
@@ -32,6 +32,7 @@
 
 #include "LibWebRTCMacros.h"
 #include "RealtimeMediaSource.h"
+#include <Timer.h>
 #include <webrtc/api/mediastreaminterface.h>
 #include <webrtc/base/optional.h>
 #include <webrtc/common_video/include/i420_buffer_pool.h>
@@ -56,7 +57,10 @@ public:
 private:
     RealtimeOutgoingVideoSource(Ref<RealtimeMediaSource>&&);
 
-    void sendFrame(rtc::scoped_refptr<webrtc::VideoFrameBuffer>&&, webrtc::VideoRotation);
+    void sendFrame(rtc::scoped_refptr<webrtc::VideoFrameBuffer>&&);
+    void sendBlackFrame();
+    void sendOneBlackFrame();
+    void setSizeFromSource();
 
     // Notifier API
     void RegisterObserver(webrtc::ObserverInterface*) final { }
@@ -78,6 +82,7 @@ private:
     // RealtimeMediaSource::Observer API
     void sourceMutedChanged() final;
     void sourceEnabledChanged() final;
+    void sourceSettingsChanged() final { setSizeFromSource(); }
     void videoSampleAvailable(MediaSample&) final;
 
     Vector<rtc::VideoSinkInterface<webrtc::VideoFrame>*> m_sinks;
@@ -86,6 +91,12 @@ private:
     bool m_enabled { true };
     bool m_muted { false };
     std::optional<RealtimeMediaSourceSettings> m_initialSettings;
+    webrtc::VideoRotation m_currentRotation { webrtc::kVideoRotation_0 };
+    uint32_t m_width { 0 };
+    uint32_t m_height { 0 };
+    bool m_isStopped { false };
+    Timer m_blackFrameTimer;
+    rtc::scoped_refptr<webrtc::VideoFrameBuffer> m_blackFrame;
 };
 
 } // namespace WebCore
